fix: header text on mobile

--- a/src/app/components/home/sections/header/header.scss
+++ b/src/app/components/home/sections/header/header.scss
@@ -7,7 +7,7 @@
 
   @media (max-width: 1024px) {
     padding: 0 9.75rem;
-    margin-top: 15rem;
+    margin-top: 40rem;
     margin-bottom: 86rem;
   }
 
@@ -46,7 +46,7 @@
     color: #0b0c0d;
     position: absolute;
     text-align: right;
-    top: 0.2rem;
+    top: -18rem;
     z-index: 1;
     @media (max-width: 1024px) {
       font-size: 37.5rem;
